--- a/WEB/index.html
+++ b/WEB/index.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
-        <link rel="stylesheet" href="/WEB/style.css">
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="/WEB/css/style.css">
         <title>LearnToCode</title>
     </head>
     <body>
         <header>
-            <a href="/WEB/index.html" id="app-title">LearnToCode</a>
+            <a href="/WEB/index.html" id="page-title">LearnToCode</a>
             <ul class="navbar">
                 <li><a href="">Contact</a></li>
-                <li><a href="">About</a></li>
-                <li><a href="">Home</a></li>
+                <li><a href="/WEB/about_us.html">About Us</a></li>
+                <li><a href="/WEB/index.html">Home</a></li>
+                <li><a href="/WEB/cards.html">Cards</a></li>
             </ul>
         </header>
         <div id="page-content">
