--- a/WEB/cards.html
+++ b/WEB/cards.html
@@ -9,10 +9,20 @@
     <link href="https://fonts.googleapis.com/css2?family=Protest+Guerrilla&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <script src="https://kit.fontawesome.com/5a4865fbe1.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inria+Sans:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet">
     <title>Cards</title>
 </head>
 <body>
+    <nav>
+        <h1 id="page-title">Cards <i class="fa-solid fa-id-card"></i></h1>
+        <ul class="navbar">
+            <li><a href="">Contact</a></li>
+            <li><a href="/WEB/about_us.html">About Us</a></li>
+            <li><a href="/WEB/index.html">Home</a></li>
+            <li><a href="/WEB/cards.html">Cards</a></li>
+        </ul>
+    </nav>
     <main>
         <div class="card">
             <article>
