--- a/WEB/cards.html
+++ b/WEB/cards.html
@@ -16,11 +16,18 @@
 <body>
     <nav>
         <h1 id="page-title">Cards <i class="fa-solid fa-id-card"></i></h1>
-        <ul class="navbar">
-            <li><a href="">Contact</a></li>
-            <li><a href="/WEB/about_us.html">About Us</a></li>
-            <li><a href="/WEB/index.html">Home</a></li>
-            <li><a href="/WEB/cards.html">Cards</a></li>
+        <ul>
+            <li><a href="/WEB/about_us.html" class="nav-element">About Us</a></li>
+            <li><a href="/WEB/index.html" class="nav-element">Home</a></li>
+            <li><a href="/WEB/cards.html" class="nav-element">Cards</a></li>
+            <li class="dropdown">
+                <a href="" class="dropbtn nav-element">Services</a>
+                <div class="dropdown-content">
+                    <a href="#">Link 1</a>
+                    <a href="#">Link 2</a>
+                    <a href="#">Link 3</a>
+                </div>
+            </li>
         </ul>
     </nav>
     <main>
