--- a/WEB/index.html
+++ b/WEB/index.html
@@ -10,7 +10,7 @@
         <header>
             <a href="/WEB/index.html" id="page-title">LearnToCode</a>
             <ul class="navbar">
-                <li><a href="">Contact</a></li>
+                <li><a href="">Services</a></li>
                 <li><a href="/WEB/about_us.html">About Us</a></li>
                 <li><a href="/WEB/index.html">Home</a></li>
                 <li><a href="/WEB/cards.html">Cards</a></li>
