--- a/WEB/contact.html
+++ b/WEB/contact.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/form.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
@@ -46,6 +47,30 @@
         <script src="/WEB/js/hamburger.js"></script>
     </header>
     <main>
+        <h2 class="title-1"> Contact Us</h2>
+        <form class="form">
+            <div class="form-element">
+                <label for="fname" class="label">First Name:</label>
+                <input type="text" id="fname" name="firstname" placeholder="Your name" class="input">
+            </div>
+            <div class="form-element">
+                <label for="lname" class="label">Last Name:</label>
+                <input type="text" id="lname" name="lastname" placeholder="Your last name.." class="input">
+            </div>
+            <div class="form-element">
+                <label for="Description" class="label">Description:</label>
+                <textarea name="Description" id="description" placeholder="description" class="input"></textarea>
+            </div>
+            <div class="form-element">
+                <label for="email" class="label">Email:</label>
+                <input type="email" name="email" id="email" class="input" placeholder="E-mail">
+            </div>
+            <input type="submit" value="Submit" class="submit-btn">
+        </form>
+        <p class="more-info">Tvaiku iela 5</p>
+        <p class="more-info">Rīga, LV-1039</p>
+        <p class="more-info">26517513 (10:00-17:00)</p>
+        <p class="more-info">learn.to.code@gmail.com</p>
     </main>
     <footer> &copy; Copyright 2024 LearnToCode </footer>
 </body>
