Pievienots dark-mode.

--- a/WEB/cards.html
+++ b/WEB/cards.html
@@ -18,6 +18,13 @@
     <header>
         <h1 class="page-title">Cards <i class="fa-solid fa-id-card page-icon"></i></h1>
         <nav class="navbar">
+            <i class="fa-solid fa-moon moon-ico"></i>
+            <div class="toggle-switch">
+                <label class="switch">
+                    <input type="checkbox" id="toggle-switch">
+                    <span class="slider round"></span>
+                </label>
+            </div>
             <ul>
                 <li><a href="/WEB/index.html" class="nav-element">Home</a></li>
                 <li><a href="/WEB/contact.html" class="nav-element">Contact</a></li>
@@ -93,8 +100,10 @@
                 </div>
             </div>
             <script src="/WEB/js/modal.js"></script>
+            <script></script>
         </div>
     </main>
+    <script src="/WEB/js/toggle_switch.js"></script>
     <footer> &copy; Copyright 2024 LearnToCode </footer>
 </body>
 </html>
