--- a/WEB/index.html
+++ b/WEB/index.html
@@ -15,6 +15,14 @@
         <header>
             <h1 href="/WEB/index.html" class="page-title">LearnToCode <i class="fa-solid fa-keyboard page-icon"></i></h1>
             <nav class="navbar">
+                <i class="fa-solid fa-moon moon-ico"></i>
+                <div class="toggle-switch">
+                    <label class="switch">
+                        <input type="checkbox" id="toggle-switch">
+                        <span class="slider round"></span>
+                    </label>
+                </div>
+                <script src="/WEB/js/toggle_switch.js"></script>
                 <ul>
                     <li><a href="/WEB/cards.html" class="nav-element">Cards</a></li>
                     <li><a href="/WEB/contact.html" class="nav-element">Contact</a></li>
