--- a/WEB/contact.html
+++ b/WEB/contact.html
@@ -16,6 +16,14 @@
     <header>
         <h1 href="/WEB/index.html" class="page-title">Contact</h1>
         <nav class="navbar">
+            <i class="fa-solid fa-moon moon-ico"></i>
+            <div class="toggle-switch">
+                <label class="switch">
+                    <input type="checkbox" id="toggle-switch">
+                    <span class="slider round"></span>
+                </label>
+            </div>
+            <script src="/WEB/js/toggle_switch.js"></script>
             <ul>
                 <li><a href="/WEB/index.html" class="nav-element">Home</a></li>
                 <li><a href="/WEB/cards.html" class="nav-element">Cards</a></li>
