Pievienota documentations sadala

--- a/WEB/cards.html
+++ b/WEB/cards.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Inria+Sans:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/5a4865fbe1.js" crossorigin="anonymous"></script>
-    <title>Cards</title>
+    <title>LTCode | Cards</title>
     <link rel="icon" type="image/x-icon" href="./images/game_controller.png">
 </head>
 <body>
@@ -29,11 +29,11 @@
                 <li><a href="/WEB/index.html" class="nav-element">Home</a></li>
                 <li><a href="/WEB/contact.html" class="nav-element">Contact</a></li>
                 <li class="dropdown">
-                    <a href="#" class="dropbtn nav-element">Services</a>
+                    <a href="#" class="dropbtn nav-element">Resources</a>
                     <div class="dropdown-content">
-                        <a href="#" class="dropdown-element">Link 1</a>
-                        <a href="#" class="dropdown-element">Link 2</a>
-                        <a href="#" class="dropdown-element">Link 3</a>
+                        <a href="/WEB/documentations.html" class="dropdown-element">Documentations</a>
+                        <a href="#" class="dropdown-element">Tutorials</a>
+                        <a href="#" class="dropdown-element">E-books</a>
                     </div>
                 </li>
             </ul>
@@ -44,11 +44,11 @@
                 <a href="/WEB/index.html" class="hamburger-element">Home</a>
                 <a href="/WEB/contact.html" class="hamburger-element">Contact</a>
                 <div class="hamburger-dropdown">
-                    <a href="javascript:void(0);" class="hamburger-element">Services</a>
+                    <a href="javascript:void(0);" class="hamburger-element">Resources</a>
                     <div class="hamburger-dropdown-content">
-                        <a href="#" class="hamburger-element">Link 1</a>
-                        <a href="#" class="hamburger-element">Link 2</a>
-                        <a href="#" class="hamburger-element">Link 3</a>
+                        <a href="/WEB/documentations.html" class="hamburger-element">Documentations</a>
+                        <a href="#" class="hamburger-element">Tutorials</a>
+                        <a href="#" class="hamburger-element">E-books</a>
                     </div>
                 </div>
             </div>
@@ -90,7 +90,6 @@
                 <img class="card-img" src="/WEB/images/PHP.png" alt="PHP">
             </div>
             <div id="Modal" class="modal">
-                <!-- Modal content -->
                 <div class="modal-content">
                     <div class="modal-header">
                         <i class="fa-regular fa-circle-xmark" id="close"></i>
