--- a/WEB/contact.html
+++ b/WEB/contact.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/5a4865fbe1.js" crossorigin="anonymous"></script>
-    <title>Contact</title>
+    <title>LTCode | Contact</title>
     <link rel="icon" type="image/x-icon" href="./images/game_controller.png">
 </head>
 <body>
@@ -28,11 +28,11 @@
                 <li><a href="/WEB/index.html" class="nav-element">Home</a></li>
                 <li><a href="/WEB/cards.html" class="nav-element">Cards</a></li>
                 <li class="dropdown">
-                    <a href="#" class="dropbtn nav-element">Services</a>
+                    <a href="#" class="dropbtn nav-element">Resources</a>
                     <div class="dropdown-content">
-                        <a href="#" class="dropdown-element">Link 1</a>
-                        <a href="#" class="dropdown-element">Link 2</a>
-                        <a href="#" class="dropdown-element">Link 3</a>
+                        <a href="/WEB/documentations.html" class="dropdown-element">Documentations</a>
+                        <a href="#" class="dropdown-element">Tutorials</a>
+                        <a href="#" class="dropdown-element">E-books</a>
                     </div>
                 </li>
             </ul>
@@ -43,11 +43,11 @@
                 <a href="/WEB/index.html" class="hamburger-element">Home</a>
                 <a href="/WEB/cards.html" class="hamburger-element">Cards</a>
                 <div class="hamburger-dropdown">
-                    <a href="javascript:void(0);" class="hamburger-element">Services</a>
+                    <a href="javascript:void(0);" class="hamburger-element">Resources</a>
                     <div class="hamburger-dropdown-content">
-                        <a href="#" class="hamburger-element">Link 1</a>
-                        <a href="#" class="hamburger-element">Link 2</a>
-                        <a href="#" class="hamburger-element">Link 3</a>
+                        <a href="#" class="hamburger-element">Documentations</a>
+                        <a href="#" class="hamburger-element">Tutorials</a>
+                        <a href="#" class="hamburger-element">E-books</a>
                     </div>
                 </div>
             </div>
