--- a/WEB/index.html
+++ b/WEB/index.html
@@ -27,12 +27,12 @@
                     <li><a href="/WEB/cards.html" class="nav-element">Cards</a></li>
                     <li><a href="/WEB/contact.html" class="nav-element">Contact</a></li>
                     <li class="dropdown">
-                        <a href="#" class="dropbtn nav-element">Services</a>
-                        <div class="dropdown-content">
-                            <a href="#" class="dropdown-element">Link 1</a>
-                            <a href="#" class="dropdown-element">Link 2</a>
-                            <a href="#" class="dropdown-element">Link 3</a>
-                        </div>
+                        <a href="#" class="dropbtn nav-element">Resources</a>
+                    <div class="dropdown-content">
+                        <a href="/WEB/documentations.html" class="dropdown-element">Documentations</a>
+                        <a href="#" class="dropdown-element">Tutorials</a>
+                        <a href="#" class="dropdown-element">E-books</a>
+                    </div>
                     </li>
                 </ul>
             </nav>
@@ -42,11 +42,11 @@
                     <a href="/WEB/cards.html" class="hamburger-element">Cards</a>
                     <a href="/WEB/contact.html" class="hamburger-element">Contact</a>
                     <div class="hamburger-dropdown">
-                        <a href="javascript:void(0);" class="hamburger-element">Services</a>
+                        <a href="javascript:void(0);" class="hamburger-element">Resources</a>
                         <div class="hamburger-dropdown-content">
-                            <a href="#" class="hamburger-element">Link 1</a>
-                            <a href="#" class="hamburger-element">Link 2</a>
-                            <a href="#" class="hamburger-element">Link 3</a>
+                            <a href="/WEB/documentations.html" class="hamburger-element">Documentations</a>
+                            <a href="#" class="hamburger-element">Tutorials</a>
+                            <a href="#" class="hamburger-element">E-books</a>
                         </div>
                     </div>
                 </div>
