Pievienota Header pielāde izmantojot jS.

--- a/WEB/cards.html
+++ b/WEB/cards.html
@@ -15,46 +15,7 @@
     <link rel="icon" type="image/x-icon" href="./images/game_controller.png">
 </head>
 <body>
-    <header>
-        <h1 class="page-title">Cards <i class="fa-solid fa-id-card page-icon"></i></h1>
-        <nav class="navbar">
-            <i class="fa-solid fa-moon moon-ico"></i>
-            <div class="toggle-switch">
-                <label class="switch">
-                    <input type="checkbox" id="toggle-switch">
-                    <span class="slider round"></span>
-                </label>
-            </div>
-            <ul>
-                <li><a href="/WEB/index.html" class="nav-element">Home</a></li>
-                <li><a href="/WEB/contact.html" class="nav-element">Contact</a></li>
-                <li class="dropdown">
-                    <a href="#" class="dropbtn nav-element">Resources</a>
-                    <div class="dropdown-content">
-                        <a href="/WEB/documentations.html" class="dropdown-element">Documentations</a>
-                        <a href="#" class="dropdown-element">Tutorials</a>
-                        <a href="#" class="dropdown-element">E-books</a>
-                    </div>
-                </li>
-            </ul>
-        </nav>
-        <div class="hamburger">
-            <button href="javascript:void(0);" id="hamburger"><i class="fa-solid fa-bars"></i></button>
-            <div class="dropdown-content">
-                <a href="/WEB/index.html" class="hamburger-element">Home</a>
-                <a href="/WEB/contact.html" class="hamburger-element">Contact</a>
-                <div class="hamburger-dropdown">
-                    <a href="javascript:void(0);" class="hamburger-element">Resources</a>
-                    <div class="hamburger-dropdown-content">
-                        <a href="/WEB/documentations.html" class="hamburger-element">Documentations</a>
-                        <a href="#" class="hamburger-element">Tutorials</a>
-                        <a href="#" class="hamburger-element">E-books</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <script src="/WEB/js/hamburger.js"></script>
-    </header>
+    <script src="/WEB/js/header.js"></script>
     <main>
         <div class="cards">
             <div class="card">
@@ -99,10 +60,8 @@
                 </div>
             </div>
             <script src="/WEB/js/modal.js"></script>
-            <script></script>
         </div>
     </main>
-    <script src="/WEB/js/toggle_switch.js"></script>
     <footer> &copy; Copyright 2024 LearnToCode </footer>
 </body>
 </html>
