--- a/WEB/contact.html
+++ b/WEB/contact.html
@@ -13,47 +13,6 @@
     <link rel="icon" type="image/x-icon" href="./images/game_controller.png">
 </head>
 <body>
-    <header>
-        <h1 href="/WEB/index.html" class="page-title">Contact</h1>
-        <nav class="navbar">
-            <i class="fa-solid fa-moon moon-ico"></i>
-            <div class="toggle-switch">
-                <label class="switch">
-                    <input type="checkbox" id="toggle-switch">
-                    <span class="slider round"></span>
-                </label>
-            </div>
-            <script src="/WEB/js/toggle_switch.js"></script>
-            <ul>
-                <li><a href="/WEB/index.html" class="nav-element">Home</a></li>
-                <li><a href="/WEB/cards.html" class="nav-element">Cards</a></li>
-                <li class="dropdown">
-                    <a href="#" class="dropbtn nav-element">Resources</a>
-                    <div class="dropdown-content">
-                        <a href="/WEB/documentations.html" class="dropdown-element">Documentations</a>
-                        <a href="#" class="dropdown-element">Tutorials</a>
-                        <a href="#" class="dropdown-element">E-books</a>
-                    </div>
-                </li>
-            </ul>
-        </nav>
-        <div class="hamburger">
-            <button href="javascript:void(0);" id="hamburger"><i class="fa-solid fa-bars"></i></button>
-            <div class="dropdown-content">
-                <a href="/WEB/index.html" class="hamburger-element">Home</a>
-                <a href="/WEB/cards.html" class="hamburger-element">Cards</a>
-                <div class="hamburger-dropdown">
-                    <a href="javascript:void(0);" class="hamburger-element">Resources</a>
-                    <div class="hamburger-dropdown-content">
-                        <a href="#" class="hamburger-element">Documentations</a>
-                        <a href="#" class="hamburger-element">Tutorials</a>
-                        <a href="#" class="hamburger-element">E-books</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <script src="/WEB/js/hamburger.js"></script>
-    </header>
     <main>
         <h2 class="title-1"> Contact Us</h2>
         <form class="form">
@@ -80,6 +39,7 @@
         <p class="more-info">26517513 (10:00-17:00)</p>
         <p class="more-info">learn.to.code@gmail.com</p>
     </main>
+    <script src="/WEB/js/header.js"></script>
     <footer> &copy; Copyright 2024 LearnToCode </footer>
 </body>
 </html>
