--- a/WEB/index.html
+++ b/WEB/index.html
@@ -12,47 +12,6 @@
         <link rel="icon" type="image/x-icon" href="./images/game_controller.png">
     </head>
     <body>
-        <header>
-            <h1 href="/WEB/index.html" class="page-title">LearnToCode <i class="fa-solid fa-keyboard page-icon"></i></h1>
-            <nav class="navbar">
-                <i class="fa-solid fa-moon moon-ico"></i>
-                <div class="toggle-switch">
-                    <label class="switch">
-                        <input type="checkbox" id="toggle-switch">
-                        <span class="slider round"></span>
-                    </label>
-                </div>
-                <script src="/WEB/js/toggle_switch.js"></script>
-                <ul>
-                    <li><a href="/WEB/cards.html" class="nav-element">Cards</a></li>
-                    <li><a href="/WEB/contact.html" class="nav-element">Contact</a></li>
-                    <li class="dropdown">
-                        <a href="#" class="dropbtn nav-element">Resources</a>
-                    <div class="dropdown-content">
-                        <a href="/WEB/documentations.html" class="dropdown-element">Documentations</a>
-                        <a href="#" class="dropdown-element">Tutorials</a>
-                        <a href="#" class="dropdown-element">E-books</a>
-                    </div>
-                    </li>
-                </ul>
-            </nav>
-            <div class="hamburger">
-                <button href="javascript:void(0);" id="hamburger"><i class="fa-solid fa-bars"></i></button>
-                <div class="dropdown-content">
-                    <a href="/WEB/cards.html" class="hamburger-element">Cards</a>
-                    <a href="/WEB/contact.html" class="hamburger-element">Contact</a>
-                    <div class="hamburger-dropdown">
-                        <a href="javascript:void(0);" class="hamburger-element">Resources</a>
-                        <div class="hamburger-dropdown-content">
-                            <a href="/WEB/documentations.html" class="hamburger-element">Documentations</a>
-                            <a href="#" class="hamburger-element">Tutorials</a>
-                            <a href="#" class="hamburger-element">E-books</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <script src="/WEB/js/hamburger.js"></script>
-        </header>
         <div class="content-with-side">
             <main>
                 <h2 class="title-1">Welcome to my LearnToCode!</h2>
@@ -66,6 +25,7 @@
                 <a href="https://www.w3schools.com/python/" class="side-element">Click there for more info!</a>
             </aside>
         </div>
+        <script src="/WEB/js/header.js"></script>
         <footer> &copy; Copyright 2024 LearnToCode </footer>
     </body>
 </html>
